SubVersion: $Id$

To do: 
  - pre-init structs (ti9x_create_regular_content) rather than bzeros them.

Log:

- 20/07/2005, version 0.6.6: roms
	Fixed new gcc4.0 warnings.
	
- 25/05/2005, version 0.6.5: roms
	Fixed detection of TI file signature (not case sensitive).

- 04/05/2005, version 0.6.4: roms
	Make loading of FLASH OS more robust against file 'garbaged' by TI !
	Endianess fixes by JB (13/05/2005 jb: src/misc.c: endianness fixes) and CW.

- 05/03/2005, version 0.6.3: roms
	Added gcc 4.0 -fvisibility flag support.
	
- 03/11/2004, version 0.6.2: roms
	Fixed and tested TIB file support (read only).

- 18/09/2004, version 0.6.1: roms
	Added TI89 Titanium support. File format seems to be the same as TI89.
	Added TI84+ (SE) support. File format seems to be the same as TI83+.

- 02/07/2004, version 0.6.0: roms
	Loading of TI9x flash upgrades is less restrictive now. It can accept badly
	formatted files.
	Added checking for TI89 Titanium but FLASH upgrades have same extension and
	same header.

- 22/04/2004, version 0.5.9: roms
	Patch from Adrian Mettler <amettler@hmc.edu> merged. His patch fixes
	  some TI85/86 file handling issues about varname (padded, not padded).
	Patch from Benjamin Moody <> merged. His patch fixes a crash when TiLP
	is parsing a file which contains the TI signature but has no extension.

- 08/04/2004, version 0.5.8: roms
	Redirection of stdout/stderr.
	Fixed TI85/TI86 varname encoding bug.
	Added/improved TIB file support.

- 27/08/2003, version 0.5.7: maintenance release by JB.
	Use AM_MAINTAINER_MODE in configure.in
	Upgraded to automake 1.7
	Upgraded to libtool 1.5

- 01/05/2003, version 0.5.6:
	Added 'mu' char to TI89..V200. Unicode translation was missing for
	TI92(+)/V200.
	trans.c has been hugely reworked:
	- varname detokenization
	- TI-charset to user-selected charset transcoding
	
- 19/04/2003, version 0.5.5:
	Added various varname translations (ASCII, ISO8859-1 and UTF-8).